Second Module Added

--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exploration CSS</title>
     <link rel="stylesheet" href="css/style.css" />
-
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <h1>Hey Brother</h1>
+    <h1>Hey Brother.</h1>
     <p class="first-text">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod cupiditate
       iusto, <strong>suscipit vero deserunt, adipisci reiciendis aspernatur <br />
         cumque modi ducimus consectetur</strong> nesciunt perferendis quam neque soluta.
-      Repellendus ipsam maxime facilis id. Magni quibusdam <br />
+      Repellendus ipsam maxime facilis id. Magni quibusdam.<br />
       alias exercitationem quam commodi deleniti natus optio ratione, mollitia
       architecto ut! Laboriosam fugaea?
     </p>
@@ -25,9 +24,9 @@
     <h3>Hello Japan</h3>
 
     <h5 class="birany" id="coke">First</h5>
-    <h5>Second</h5>
-    <h5>Third</h5>
-    <h5>Fifth</h5>
+    <h5>Second.</h5>
+    <h5>Third.</h5>
+    <h5>Fifth.</h5>
     <h5 class="birany kala-vuna">Sixth</h5>
 
     <h4 class="second-text">
